# dadgap

./: .env.example  .gitignore  DATA.md  LICENSE  METHODS.md  Makefile  README.md  pyproject.toml
.github/workflows/: smoke.yml
config/: analysis_targets.example.yaml  cohort_role_matrix.yaml  user_inputs.example.yaml
config/templates/: add_health_manifest_template.csv  ffcws_manifest_template.csv  nlsy79_manifest_template.csv  nlsy97_manifest_template.csv  psid_manifest_template.csv
docs/: faq.html  index.html  methods.html  outcomes.html  prevalence.html  results.json
docs/js/: results.js  theme.js
scripts/: bootstrap_project.sh  run_pilot.sh
src/father_longrun/: __init__.py  __main__.py  cli.py  config.py  questions.py  registry.py  utils.py
src/father_longrun/models/: __init__.py  associations.py  ml.py  quasi_causal.py
src/father_longrun/pipelines/: __init__.py  add_health.py  contracts.py  ffcws.py  harmonize.py  nlsy.py  psid.py  public_benchmarks.py  reporting.py  synthesize.py
tests/: test_associations.py  test_cli.py  test_config.py  test_docs_site.py  test_harmonize.py  test_models.py  test_nlsy.py  test_psid.py  test_public_benchmarks.py  test_questions.py  test_reporting.py  test_secondary_public_use.py  test_synthesize.py
